Fixed whitespace on CBHDashboard between Featured and MainContent. Graphcontainer had margin on it.

--- a/LotBankingCrux_v_1/Content/Site.css
+++ b/LotBankingCrux_v_1/Content/Site.css
@@ -9,7 +9,7 @@ html {
 
 body {
     height: 100%;
-    margin: 0;
+    margin: auto;
 }
 
 a:hover {
@@ -17,8 +17,8 @@ a:hover {
 }
 
 header {
-    height: 36px;
-    padding: 0 0 0 2%;
+    height: 30px;
+    padding: 15px;
     background-color: black;
     vertical-align: middle;
     margin-top: 0px;
@@ -194,6 +194,7 @@ a {
 
 .panel-parent {
     display: block;
+    background-color: white;
     margin: 0 auto;
     width: 82%;
 }
@@ -223,8 +224,7 @@ a {
     background-color: white;
     height: 42%;
     width: 100%;
-    margin-top: 3%;
-    margin-bottom: 3%;
+   
 }
 
 .tasklist th {
